# SafeDS-CNN-Examples

./: .gitignore  README.md  pyproject.toml
src/: fashion_mnist.ipynb  kmnist.ipynb  mnist.ipynb  rice-image-dataset.ipynb
